--- a/stacklion/static/stacklion/css/QnA.css
+++ b/stacklion/static/stacklion/css/QnA.css
@@ -32,7 +32,7 @@
     font-family: 'Noto Sans KR', sans-serif; 
     font-weight: bolder;
   }
-  h2{
+  h2,h4{
     font-family: 'Noto Sans KR', sans-serif; 
     font-weight: bolder;
 
@@ -54,4 +54,21 @@
     padding: 20px; 
   }
   
-  
+div.answer_form{
+  border: 1px  solid rgb(179, 179, 179);
+  margin-bottom: 15px;
+  padding: 10px;
+  width: 95%;
+  margin-left: calc(100%/50);
+}  
+button{
+  text-align: center;
+  font-weight: bold;
+  border: 0.5px solid black;
+  width: 50px;
+}
+input{
+  text-align: center;
+  font-weight: bold;
+  border: 0.5px solid black;
+}
