--- a/.static/homework/css/homeworklist.css
+++ b/.static/homework/css/homeworklist.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap');
+@import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
 
 .shell {
     display: grid;
@@ -18,19 +17,22 @@
     content: "";
     grid-column: 1/-1;
     grid-row: 1/3;
-    background-color: rgb(255, 153, 0);
+    background-image: linear-gradient( 135deg, #FD6585 10%, #0D25B9 90%);
   }
   
   .shell-header {
     grid-column: 2 / 3;
     grid-row: 1 / 2;
     color: white;
-    background-color: rgb(255, 153, 0);
+    background-image: linear-gradient( 135deg, #FD6585 10%, #0D25B9 100%);
     padding: 35px 20px;
-    font-family: 'Black Han Sans', sans-serif;
+    font-family: 'Noto Sans KR', sans-serif; 
+    font-weight: bolder;
   }
   h2{
-    font-family: 'Black Han Sans', sans-serif; 
+    font-family: 'Noto Sans KR', sans-serif; 
+    font-weight: bolder;
+
   }
   .shell-body {
     grid-row: 2 / 4;
@@ -51,7 +53,7 @@
   
   body {
     margin:0;
-    font-family: 'Nanum Gothic Coding', monospace;
+    font-family: 'Noto Sans KR', sans-serif; 
   }
   .btn {
     border-radius: 5px;
@@ -62,7 +64,7 @@
     color: #fff;
     position: relative;
     display: inline-block;
-    font-family: 'Black Han Sans', sans-serif; 
+    font-family: 'Noto Sans KR', sans-serif; 
   }
   
   .btn:active {
@@ -71,11 +73,17 @@
     box-shadow: 0px 1px 0px 0px;
   }
   .orange {
-    background-color: rgb(255, 153, 0);
-    box-shadow: 0px 3px 3px 0px #CD6509;
+    background-image: linear-gradient( 135deg, #FD6585 10%, #0D25B9 100%);
+    box-shadow: 3px 3px 3px 0px #414040;
+    border: none;
+    margin: auto;
+    margin-left: calc(100%/2.19);
   }
   
   .orange:hover {
-    background-color: #FF983C;
+    color: black;
+    font-weight: bold;
   }
-  
+  summary:focus{
+    border: none;
+  }
