--- a/.static/page/css/base.css
+++ b/.static/page/css/base.css
@@ -1,4 +1,48 @@
-a {
-    font-size: 10px;
-    color: red;
+/* Fonts */
+
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap");
+
+/* nav */
+
+body{
+    font-family: "Noto Sans KR", sans-serif;
+}
+
+nav.navbar a {
+    color:rgb(180, 179, 179);
+    border-bottom: 0px #666;
+}
+
+    nav.navbar a.navbar-brand{
+        background: rgb(184,137,145);
+        background: linear-gradient(90deg, rgba(184,137,145,1) 0%, rgba(60,118,145,1) 50%, rgba(204,154,119,1) 100%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-weight: bold !important;
+        font-size: 25px, !important;
+    }
+
+    nav.navbar a.nav-item.nav-link, nav.navbar a.nav-item.nav-link {
+        color:rgb(180, 179, 179);
+    }
+
+.nav-item{
+    font-size: 15px !important;
+}
+    
+    .nav-item.user{
+        margin-left: calc(100%/1.7) !important;
+        color: white;
+        font-size: 15px !important;
+    }
+
+    .nav-item.nav-link.ml-auto{
+        font-size: medium;
+        color:rgb(180, 179, 179);
+    }
+
+.sr-only{
+    color:rgb(180, 179, 179);
 }
