--- a/.static/stacklion/css/QnA.css
+++ b/.static/stacklion/css/QnA.css
@@ -1,55 +1,78 @@
 @import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap');
-body{
-    background-color: #F2F2F2;
-    font-family: 'Nanum Gothic Coding', monospace;
-}
-h1{
-    color : #5653A6;
-    font-family: 'Black Han Sans', sans-serif;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    font-size: 50px;
-}
-h3,h4{
-    font-family: 'Black Han Sans', sans-serif;
-}
-div.entire {
-    width: 100%;
-    height: 100%;
-    font-family: 'Nanum Gothic Coding', monospace;
-}
+@import url('https://fonts.googleapis.com/css2?family=Gothic+A1&display=swap');
+@import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
 
-div.question_form{
-    width: 45%;
-    float: left;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-top: 10px;
-    font-family: 'Nanum Gothic Coding', monospace;
-}
+.shell {
+    display: grid;
+    grid-template-columns: 0 1fr 0;
+    grid-template-rows: auto 8em 1fr auto;
+  }
+  
+  @media (min-width: 600px) {
+    .shell {
+      grid-template-columns: 20px 1fr 20px;
+    }
+  }
+  
+  /* overlap */
+  .shell:before {
+    content: "";
+    grid-column: 1/-1;
+    grid-row: 1/3;
+    background-image: linear-gradient( 135deg, #FD6585 10%, #0D25B9 90%);
+  }
+  
+  .shell-header {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    color: white;
+    background-image: linear-gradient( 135deg, #FD6585 10%, #0D25B9 100%);
+    padding: 35px 20px;
+    font-family: 'Noto Sans KR', sans-serif; 
+    font-weight: bolder;
+  }
+  h2,h4{
+    font-family: 'Noto Sans KR', sans-serif; 
+    font-weight: bolder;
 
+  }
+  .shell-body {
+    grid-row: 2 / 4;
+    grid-column: 2 / 3; 
+    min-height: 40vh;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow:  0px 0px 20px rgba(0, 0, 0, 0.25);
+    background-color: #FFF;
+
+  }
+  
+  .shell-footer {
+    grid-column: 2/3;
+    grid-row: -1;
+    padding: 20px; 
+  }
+  
 div.answer_form{
-    width: 50%;
-    float: right;
-    margin-right: 10px;
-    margin-top: 30px;
-    border: rgb(223, 213, 209) 2px solid;
-    font-family: 'Nanum Gothic Coding', monospace;
+  border: 1px  solid rgb(179, 179, 179);
+  margin-bottom: 15px;
+  padding: 10px;
+  width: 95%;
+  margin-left: calc(100%/50);
+}  
+button{
+  text-align: center;
+  font-weight: bold;
+  border: 0.5px solid black;
+  width: 50px;
+}
+input{
+  text-align: center;
+  font-weight: bold;
+  border: 0.5px solid black;
 }
 
-input.button{
-    font-weight: bold;
-    font-family: 'Nanum Gothic Coding', monospace;
-    border:2px #D95829 solid;
-    border-radius: 4px;
-    background-color: rgb(236, 225, 220);
-}
-textarea.question{
-    background-color: rgb(235, 212, 212);
-    border:none;
-}
-textarea.answer{
-    background-color: rgb(235, 212, 212);
-    border:none;
+.asker {
+  color: black;
 }
