--- a/stacklion/templates/QnA.html
+++ b/stacklion/templates/QnA.html
@@ -10,148 +10,137 @@
     {% block link %}{% static 'stacklion/css/QnA.css' %}{% endblock %}
     {% block title %}Likelion Camp{% endblock %}
     {% block jqueryscript %}
-    <script type="text/javascript">
-        $(document).ready(function () {
-            {
-                %
-                if top %
-            }
-            $('html').animate({
-                scrollTop: {
-                    {
-                        top
-                    }
-                }
-            }, 400); {
-                % endif %
-            }
-        })
+        <script type="text/javascript">
+            $(document).ready(function () {
+                {% if top %}
+                    $('html').animate({{ top }}, 400)
+                    {#scrollTop: ({{ top }}, 400);#}
+                {% endif %}
+            })
 
-        $(document).on('click', '.filedelete', function (item) {
-            var fileid = $(this).attr('id');
-            console.log(fileid);
-            $('#filedelete').append('<input type="hidden" value="' + fileid + '" name="filedelete" />');
-            $('#div' + fileid).remove();
-        })
+            $(document).on('click', '.filedelete', function (item) {
+                var fileid = $(this).attr('id');
+                console.log(fileid);
+                $('#filedelete').append('<input type="hidden" value="' + fileid + '" name="filedelete" />');
+                $('#div' + fileid).remove();
+            })
 
-        $(document).on('click', '.revise', function () {
-            var id = $(this).attr("id");
-            var content = $('#question_content' + id).html();
-            var top = $('#question_content' + id).position().top;
-            var inner_div_files = ""
-            var files = $('.question_file' + id).each(function (index, item) {
-                console.log($('.question_file' + id) + "메롱")
-                console.log($(item).attr('id') + "fuck");
-                inner_div_files += '<div id="div' + $(item).attr('id') + '">' + $(item).html() +
-                    '<button id="' + $(item).attr('id') +
-                    '" class="filedelete" type="button">삭제</button><br></div>';
+            $(document).on('click', '.revise', function () {
+                var id = $(this).attr("id");
+                var content = $('#question_content' + id).html();
+                var top = $('#question_content' + id).position().top;
+                var inner_div_files = ""
+                var files = $('.question_file' + id).each(function (index, item) {
+                    inner_div_files += '<div id="div' + $(item).attr('id') + '">' + $(item).html() +
+                        '<button id="' + $(item).attr('id') +
+                        '" class="filedelete" type="button">삭제</button><br></div>';
+                });
+                console.log(files);
+                $('#div_files').replaceWith(inner_div_files);
+
+                $('#question_content' + id).replaceWith('<textarea name="revise" id="textarea' + id + '">' +
+                    content + '</textarea>');
+                $('#buttonpanel' + id).html('<button type="button" id="' + id +
+                    '" class="button cancel" value="취소">취소</button>\n' +
+                    '                        <button name="submit" type="submit" id="' + id +
+                    '" class="button complete" value="확인">확인</button>' +
+                    '<input type="hidden" name="scrolltop" value="' + top + '"/>');
+            })
+
+            $(document).on('click', '.cancel', function () {
+                var id = $(this).attr("id");
+                console.log(id);
+                var content = $('#textarea' + id).html();
+                console.log(content);
+
+                $('#textarea' + id).replaceWith('<div id="question_content' + id + '">' + content + '</div>');
+                $('#buttonpanel' + id).html('<button type="button" id="' + id +
+                    '" class="button revise" value="수정">수정</button>\n' +
+                    '                        <button type="submit" id="' + id +
+                    '" class="button delete" value="삭제">삭제</button>');
+
             });
-            console.log(files);
-
-            $('#div_files').replaceWith(inner_div_files);
-            $('#question_content' + id).replaceWith('<textarea name="revise" id="textarea' + id + '">' +
-                content + '</textarea>');
-            $('#buttonpanel' + id).html('<button type="button" id="' + id +
-                '" class="button cancel" value="취소">취소</button>\n' +
-                '                        <button name="submit" type="submit" id="' + id +
-                '" class="button complete" value="확인">확인</button>' +
-                '<input type="hidden" name="scrolltop" value="' + top + '"/>');
-        })
-
-        $(document).on('click', '.cancel', function () {
-            var id = $(this).attr("id");
-            console.log(id);
-            var content = $('#textarea' + id).html();
-            console.log(content);
-
-            $('#textarea' + id).replaceWith('<div id="question_content' + id + '">' + content + '</div>');
-            $('#buttonpanel' + id).html('<button type="button" id="' + id +
-                '" class="button revise" value="수정">수정</button>\n' +
-                '                        <button type="submit" id="' + id +
-                '" class="button delete" value="삭제">삭제</button>');
-
-        })
-    </script>
+        </script>
     {% endblock %}
 </head>
 
 {% block content %}
     <body>
-        <div class="shell">
-            <header class="shell-header">
-                <h1 style="text-align: center;">질문과 답변</h1>
-            </header>
-            <main class="shell-body">
-                <h2>{{ user.name }}님, 무엇이 궁금하신가요?</h2>
-                <form action="{% url 'new' %}" method="post" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    <input class="button" style=" font-weight: bold; 
+    <div class="shell">
+        <header class="shell-header">
+            <h1 style="text-align: center;">질문과 답변</h1>
+        </header>
+        <main class="shell-body">
+            <h2>{{ user.name }}님, 무엇이 궁금하신가요?</h2>
+            <form action="{% url 'new' %}" method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                <input class="button" style=" font-weight: bold;
                     margin-left: 95%; 
                     margin-bottom:10px; width: 55px;"
-                    type="submit" value="등록">
-                    <textarea class="question" name="question" rows="10" style="width:100%;"
-                    placeholder="질문을 입력해주세요."></textarea><br>
-                    <input type="file" name="question_file" style="border: none; font-weight: lighter;" multiple>
-                    <output id="list"></output>
-                    <br>
-                </form>
-            </main>
-            <footer class="shell-footer">
-                {% for question in questions.all reversed %}
-            <div id="{{ question.id }}" class="answer_form"> 
-                <h4 style="color: #FD6585;"> <span class="asker"> {{ question.asker }} </span>님의 질문</h4>
-                <form action="{% url 'QnA' %}" method="post">
-                    {% csrf_token %}
-                    <input type="hidden" name="id" value="{{ question.id }}"/>
-                    <div id="question_content{{ question.id }}" style="font-weight: bold;">
-                        {{ question.question_content }}
-                    </div>
-                    <div id="div_files">
-                        {% for qfile in question.files.all %}
-                        <div >
-                            <a class="question_file{{ question.id }}" id="{{ qfile.id }}" href="{{ qfile.file.url }}"
-                                download="" value="" style="color: rgb(151, 151, 151); font-size: 13px;">{{ qfile.file }}</a>
+                       type="submit" value="등록">
+                <textarea class="question" name="question" rows="10" style="width:100%;"
+                          placeholder="질문을 입력해주세요."></textarea><br>
+                <input type="file" name="question_file" style="border: none; font-weight: lighter;" multiple>
+                <output id="list"></output>
+                <br>
+            </form>
+        </main>
+        <footer class="shell-footer">
+            {% for question in questions.all reversed %}
+                <div id="{{ question.id }}" class="answer_form">
+                    <h4 style="color: #FD6585;"> <span class="asker"> {{ question.asker }} </span>님의 질문</h4>
+                    <form action="{% url 'QnA' %}" method="post">
+                        {% csrf_token %}
+                        <input type="hidden" name="id" value="{{ question.id }}"/>
+                        <div id="question_content{{ question.id }}" style="font-weight: bold;">
+                            {{ question.question_content }}
                         </div>
-                        {% endfor %}
-                    </div>
-                    <div id="filedelete"></div>
-                    <a style="margin-left: 80%; font-size: 13px;">{{ question.asker }} / {{ question.pub_date }}</a>
-                    
-                    {% if question.asker == user %}
-                    <div id="buttonpanel{{ question.id }}" name="revise" style="margin-top:10px; margin-left: 83%; font-size: 13px;">
-                        <button type="button" id="{{ question.id }}" class="button revise" value="수정">
-                            수정
-                        </button>
-                        <button name="submit" type="submit" id="{{ question.id }}" class="button delete" value="삭제">
-                            삭제
-                        </button>
-                    </div>
-                    {% endif %}
-                </form>
+                        <div id="div_files">
+                            {% for qfile in question.files.all %}
+                                <div >
+                                    <a class="question_file{{ question.id }}" id="{{ qfile.id }}" href="{{ qfile.file.url }}"
+                                       download="" value="" style="color: rgb(151, 151, 151); font-size: 13px;">{{ qfile.file }}</a>
+                                </div>
+                            {% endfor %}
+                        </div>
+                        <div id="filedelete"></div>
+                        <a style="margin-left: 80%; font-size: 13px;">{{ question.asker }} / {{ question.pub_date }}</a>
 
-                <form action="{% url 'refresh' %}" method="post">
-                    {% csrf_token %}
-                    <input type="hidden" name="val" value="answer" />
-                    <input type="hidden" value="{{ question.id }}" name="question_id">
-                    <textarea style="margin-top:20px;margin-bottom: 20px; width:93%;height: 30%;" class="answer" name="answer" rows="2"
-                        placeholder="답변을 입력해주세요."></textarea>
-                    <input type="submit" class="button" style="margin-left: 87%; margin-bottom:10px; width: 50px;" value="답변">
-                </form>
+                        {% if question.asker == user %}
+                            <div id="buttonpanel{{ question.id }}" name="revise" style="margin-top:10px; margin-left: 83%; font-size: 13px;">
+                                <button type="button" id="{{ question.id }}" class="button revise" value="수정">
+                                    수정
+                                </button>
+                                <button name="submit" type="submit" id="{{ question.id }}" class="button delete" value="삭제">
+                                    삭제
+                                </button>
+                            </div>
+                        {% endif %}
+                    </form>
 
-                {% for answer in question.answers.all %}
-                <div name="comment" style="margin:5px;">
-                    <h4 style="color:#0D25B9 ;">답변</h4>
-                    <a style=" font-weight: bold;">【</a><a style=" font-weight: bold;">{{ answer.answerer }}</a><a
-                        style=" font-weight: bold;">】</a>
-                    {{ answer.answer_content }}
+                    <form action="{% url 'refresh' %}" method="post">
+                        {% csrf_token %}
+                        <input type="hidden" name="val" value="answer" />
+                        <input type="hidden" value="{{ question.id }}" name="question_id">
+                        <textarea style="margin-top:20px;margin-bottom: 20px; width:93%;height: 30%;" class="answer" name="answer" rows="2"
+                                  placeholder="답변을 입력해주세요."></textarea>
+                        <input type="submit" class="button" style="margin-left: 87%; margin-bottom:10px; width: 50px;" value="답변">
+                    </form>
+
+                    {% for answer in question.answers.all %}
+                        <div name="comment" style="margin:5px;">
+                            <h4 style="color:#0D25B9 ;">답변</h4>
+                            <a style=" font-weight: bold;">【</a><a style=" font-weight: bold;">{{ answer.answerer }}</a><a
+                                style=" font-weight: bold;">】</a>
+                            {{ answer.answer_content }}
+                        </div>
+                    {% endfor %}
                 </div>
-                {% endfor %}
-            </div>
 
             {% endfor %}
         </footer>
     </div>
-</body>
+    </body>
 {% endblock %}
 
 </html>
