--- a/hw/templates/hw_detail.html
+++ b/hw/templates/hw_detail.html
@@ -4,15 +4,16 @@
 {% block link %}{% static 'hw/css/hw_detail.css' %}{% endblock %}
 {% block jqueryscript %}
     <script>
-
-        $('#file_select').on("change", function () {
-            alert("hello");
-            var files = $('#file_select').prop("files");
-            var names = $.map(files, function (val) { return val.name; });
-            $.each(names, function (i, name) {
-                console.log(name);
-            });
-        });
+        $(document).ready(function () {
+            $('#ex_file').on('change', function () {
+                var files = $('#ex_file').prop("files");
+                var names = $.map(files, function(val) { return val.name; });
+                $('#file_list').empty();
+                $.each(names, function (i, name) {
+                    $('#file_list').append("<div>"+name+"</div>");
+                });
+            })
+        })
     </script>
 {% endblock %}
 
@@ -32,9 +33,10 @@
         <form action="{% url 'register' %}" enctype="multipart/form-data">
             <textarea></textarea><br>
             <div class="filebox">
-                <label id="file_select" for="ex_file">파일선택</label>
+                <label for="ex_file">파일선택</label>
                 <input type="file" id="ex_file" multiple>
             </div>
+                <div id="file_list"></div>
             <input type="submit" value="제출"/>
         </form>
     </div>
