--- a/hw/templates/hw_main.html
+++ b/hw/templates/hw_main.html
@@ -4,6 +4,11 @@
 {% block content %}
     <h1>과제 제출</h1>
     <h2>최근 공지사항</h2>
+    제목 : {{ lastest.title }}
+    마감일 : {{ lastest.end_date }}
+    <div>
+    내용 : {{ lastest.content }}
+    </div>
     <h2>과제 리스트</h2>
     <table border="1">
         <tr>
