--- a/page/templates/base.html
+++ b/page/templates/base.html
@@ -11,6 +11,8 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="{% block link %} {% endblock %}">
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="{% static 'page/images/favicon.ico' %}" type="image/x-icon">
     <!-- CSS -->
     <link href="{% static 'page/css/base.css' %}" rel="stylesheet" type="text/css">
     <title>{% block title %}{% endblock %}</title>
