--- a/homework/static/homework/css/homeworklist.css
+++ b/homework/static/homework/css/homeworklist.css
@@ -72,18 +72,14 @@
     -webkit-transform: translate(0px, 5px);
     box-shadow: 0px 1px 0px 0px;
   }
-  .orange {
-    background-image: linear-gradient( 135deg, #FD6585 10%, #0D25B9 100%);
+  .btn-secondary {
     box-shadow: 3px 3px 3px 0px #414040;
     border: none;
     margin: auto;
     margin-left: calc(100%/2.19);
+    align-items: center;
   }
-  
-  .orange:hover {
-    color: black;
-    font-weight: bold;
-  }
+
   summary:focus{
     border: none;
   }
