--- a/homework/templates/homeworklist.html
+++ b/homework/templates/homeworklist.html
@@ -3,6 +3,7 @@
 
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,129 +11,131 @@
     {% block title %}Likelion Camp{% endblock %}
 </head>
 {% block content%}
+
 <body>
     <div class="shell">
         <header class="shell-header">
-      
+
             <h1 style="text-align: center;">과제 알림 및 제출</h1>
-      
-      
+
         </header>
         <main class="shell-body">
             <h2>[공지사항]</h2>
 
             {% if user.is_superuser == True %}
-            <a href="{%url 'noticenew'%}" id="noticenew" style="color: rgb(158, 158, 158);font-size: 15px;">공지사항 추가</a><br>
+            <a href="{%url 'noticenew'%}" id="noticenew" style="color: rgb(158, 158, 158);font-size: 15px;">공지사항
+                추가</a><br>
             {% endif %}
 
             {% for notice in notices.all reversed %}
-             
+
             {% if forloop.counter == 1 %}
-            <p><a href="{%url 'noticedetail' notice.id %}" style="color: rgb(0, 0, 0);font-weight: bold;">{{notice.content}}</a>
+            <p><a href="{%url 'noticedetail' notice.id %}"
+                    style="color: rgb(0, 0, 0);font-weight: bold;">{{notice.content}}</a>
                 <br><a style="color: red; font-weight: bold;">과제 마감 : {{notice.submitdate}}</a>
                 <br>
-                </p>
+            </p>
             {% endif %}
             {% endfor %}
-          
-            
 
-            <details open=True> 
-            <summary style="color:rgb(116, 114, 114); font-size: 15px; text-align: right;">공지 더보기</summary>
-            {% for notice_blog in notice_blogs %}
-            {% if forloop.counter > 1 %}
-            <div style="margin-bottom: 10px;">
-                <a href="{% url 'noticedetail' notice_blog.id %}" style="color: rgb(90, 90, 90); font-size: 13px;">
-                    {{ notice_blog.content }} / 마감일 : {{notice_blog.submitdate}}
-                </a>
-            </div>
-            {% endif %}
-            {% endfor %}
-            
-            <div style="text-align: center; margin-top: 10px;">
-                {% if notice_blogs.has_previous and not notice_blogs.has_next %}
-                <a href="?notice_page={{notice_blogs.previous_page_number}}" style="color: black; text-align: center; font-weight: bold;">←</a>
-                {# NowOfTotal #}
-                <span>[{{notice_blogs.number}}</span>
-                <span>/</span>
-                <span>{{notice_blogs.paginator.num_pages}}]</span>
+            <details open=True>
+                <summary style="color:rgb(116, 114, 114); font-size: 15px; text-align: right;">공지 더보기</summary>
+                {% for notice_blog in notice_blogs %}
+                {% if forloop.counter > 1 %}
+                <div style="margin-bottom: 10px;">
+                    <a href="{% url 'noticedetail' notice_blog.id %}" style="color: rgb(90, 90, 90); font-size: 13px;">
+                        {{ notice_blog.content }} / 마감일 : {{notice_blog.submitdate}}
+                    </a>
+                </div>
                 {% endif %}
-                
-                {% if notice_blogs.has_previous and notice_blogs.has_next %}
-                <a href="?notice_page={{notice_blogs.previous_page_number}}" style="color: black; text-align: center; font-weight: bold;">←</a>
-                {# NowOfTotal #}
-                <span>[{{notice_blogs.number}}</span>
-                <span>/</span>
-                <span>{{notice_blogs.paginator.num_pages}}]</span>
-                <a href="?notice_page={{notice_blogs.next_page_number}}" style="color: black; text-align: center; font-weight: bold;">→</a>
-                {% endif %}
-                
-                
-                {% if notice_blogs.has_next and not notice_blogs.has_previous %}
-                {# NowOfTotal #}
-                <span>[{{notice_blogs.number}}</span>
-                <span>/</span>
-                <span>{{notice_blogs.paginator.num_pages}}]</span>
-                <a href="?notice_page={{notice_blogs.next_page_number}}" style="color: black; text-align: center; font-weight: bold;">→</a>
-                {% endif %}
-                       
-            </div> 
-               
-        </details>
+                {% endfor %}
+
+                <div style="text-align: center; margin-top: 10px;">
+                    {% if notice_blogs.has_previous and not notice_blogs.has_next %}
+                    <a href="?notice_page={{notice_blogs.previous_page_number}}"
+                        style="color: black; text-align: center; font-weight: bold;">←</a>
+                    {# NowOfTotal #}
+                    <span>[{{notice_blogs.number}}</span>
+                    <span>/</span>
+                    <span>{{notice_blogs.paginator.num_pages}}]</span>
+                    {% endif %}
+
+                    {% if notice_blogs.has_previous and notice_blogs.has_next %}
+                    <a href="?notice_page={{notice_blogs.previous_page_number}}"
+                        style="color: black; text-align: center; font-weight: bold;">←</a>
+                    {# NowOfTotal #}
+                    <span>[{{notice_blogs.number}}</span>
+                    <span>/</span>
+                    <span>{{notice_blogs.paginator.num_pages}}]</span>
+                    <a href="?notice_page={{notice_blogs.next_page_number}}"
+                        style="color: black; text-align: center; font-weight: bold;">→</a>
+                    {% endif %}
+
+
+                    {% if notice_blogs.has_next and not notice_blogs.has_previous %}
+                    {# NowOfTotal #}
+                    <span>[{{notice_blogs.number}}</span>
+                    <span>/</span>
+                    <span>{{notice_blogs.paginator.num_pages}}]</span>
+                    <a href="?notice_page={{notice_blogs.next_page_number}}"
+                        style="color: black; text-align: center; font-weight: bold;">→</a>
+                    {% endif %}
+
+                </div>
+
+            </details>
         </main>
 
-        
-
-        
         <footer class="shell-footer">
-            
-                <a href="{%url 'homeworknew'%}" id="homeworknew" class="btn orange">제 출 하 기</a><br>
-        <details open=True>
-            <summary style="color:rgb(116, 114, 114); font-size: 15px; text-align: right; margin-top: 10px;">제출된 과제</summary>
-            {% for blog in blogs %}
-            <div style="margin-bottom: 10px; color: rgb(90, 90, 90);">
-                <a href="{% url 'detail' blog.id %}" style="color: rgb(90, 90, 90); font-size: 13px;">{{ blog.title }}【{{blog.author}}】/{{blog.pub_date}}
-                </a>
-            </div>
-            {% endfor %}
-            
-            <div style="text-align: center; margin-top: 10px;">
-                {% if blogs.has_previous and not blogs.has_next %}
-                <a href="?blog_page={{blogs.previous_page_number}}" style="color: black; font-weight: bold;">←</a>
-                {# NowOfTotal #}
-                <span>[{{blogs.number}}</span>
-                <span>/</span>
-                <span>{{blogs.paginator.num_pages}}]</span>
-                
-                {% endif %}
 
-                {% if blogs.has_previous and blogs.has_next %}
-                <a href="?blog_page={{blogs.previous_page_number}}" style="color: black; font-weight: bold;">←</a>
-                {# NowOfTotal #}
-                <span>[{{blogs.number}}</span>
-                <span>/</span>
-                <span>{{blogs.paginator.num_pages}}]</span>
-                <a href="?blog_page={{blogs.next_page_number}}"style="color: black; text-align: center; font-weight: bold;">→</a>
-                {% endif %}
-    
-                {% if blogs.has_next and not blogs.has_previous %}
-                {# NowOfTotal #}
-                <span>[{{blogs.number}}</span>
-                <span>/</span>
-                <span>{{blogs.paginator.num_pages}}]</span>
-                <a href="?blog_page={{blogs.next_page_number}}"style="color: black; text-align: center; font-weight: bold;">→</a>
-                {% endif %}
-            </div>      
-        </details>
-        
-       
+            <a href="{%url 'homeworknew'%}" id="homeworknew" class="btn btn-secondary">제 출 하 기</a><br>
+            <details open=True>
+                <summary style="color:rgb(116, 114, 114); font-size: 15px; text-align: right; margin-top: 10px;">제출된 과제
+                </summary>
+                {% for blog in blogs %}
+                <div style="margin-bottom: 10px; color: rgb(90, 90, 90);">
+                    <a href="{% url 'detail' blog.id %}"
+                        style="color: rgb(90, 90, 90); font-size: 13px;">{{ blog.title }}【{{blog.author}}】/{{blog.pub_date}}
+                    </a>
+                </div>
+                {% endfor %}
+
+                <div style="text-align: center; margin-top: 10px;">
+                    {% if blogs.has_previous and not blogs.has_next %}
+                    <a href="?blog_page={{blogs.previous_page_number}}" style="color: black; font-weight: bold;">←</a>
+                    {# NowOfTotal #}
+                    <span>[{{blogs.number}}</span>
+                    <span>/</span>
+                    <span>{{blogs.paginator.num_pages}}]</span>
+
+                    {% endif %}
+
+                    {% if blogs.has_previous and blogs.has_next %}
+                    <a href="?blog_page={{blogs.previous_page_number}}" style="color: black; font-weight: bold;">←</a>
+                    {# NowOfTotal #}
+                    <span>[{{blogs.number}}</span>
+                    <span>/</span>
+                    <span>{{blogs.paginator.num_pages}}]</span>
+                    <a href="?blog_page={{blogs.next_page_number}}"
+                        style="color: black; text-align: center; font-weight: bold;">→</a>
+                    {% endif %}
+
+                    {% if blogs.has_next and not blogs.has_previous %}
+                    {# NowOfTotal #}
+                    <span>[{{blogs.number}}</span>
+                    <span>/</span>
+                    <span>{{blogs.paginator.num_pages}}]</span>
+                    <a href="?blog_page={{blogs.next_page_number}}"
+                        style="color: black; text-align: center; font-weight: bold;">→</a>
+                    {% endif %}
+                </div>
+            </details>
+
+
         </footer>
-      </div>
-    
+    </div>
 
-    
 </body>
 {% endblock %}
-
 
 </html>
