--- a/homework/templates/noticenew.html
+++ b/homework/templates/noticenew.html
@@ -21,6 +21,8 @@
             {% csrf_token %}
             <h3>〖 마감일 〗</h3>
             <input type="date" name="submitdate" class="date">
+            <h3>〖 제목 〗</h3>
+            <input class="title" type="text" name='title'>
             <h3>〖 내용 〗</h3>
             <textarea name="content" cols="50" rows="10"></textarea>
             <br>
