--- a/homework/static/homework/css/homeworklist.css
+++ b/homework/static/homework/css/homeworklist.css
@@ -72,6 +72,7 @@
     -webkit-transform: translate(0px, 5px);
     box-shadow: 0px 1px 0px 0px;
   }
+
   .btn-secondary {
     box-shadow: 3px 3px 3px 0px #414040;
     border: none;
@@ -80,6 +81,15 @@
     align-items: center;
   }
 
+  .btn-primary{
+    float: right;
+  }
+
   summary:focus{
     border: none;
+  }
+
+  .card-text{
+    color: red;
+    font-weight: bold;
   }
