--- a/homework/templates/homeworklist.html
+++ b/homework/templates/homeworklist.html
@@ -22,19 +22,17 @@
         <main class="shell-body">
             <h2>[공지사항]</h2>
 
-            {% if user.is_superuser == True %}
-            <a href="{%url 'noticenew'%}" id="noticenew" style="color: rgb(158, 158, 158);font-size: 15px;">공지사항
-                추가</a><br>
-            {% endif %}
-
             {% for notice in notices.all reversed %}
 
             {% if forloop.counter == 1 %}
-            <p><a href="{%url 'noticedetail' notice.id %}"
-                    style="color: rgb(0, 0, 0);font-weight: bold;">{{notice.content}}</a>
-                <br><a style="color: red; font-weight: bold;">과제 마감 : {{notice.submitdate}}</a>
-                <br>
-            </p>
+            <div class="card w-75">
+                <div class="card-body">
+                    <h3 class="card-title"><a href="{%url 'noticedetail' notice.id %}">{{notice.title}}</a></h3>
+                    <h6>{{notice.content}} </h6>
+                    <p class="card-text">과제 마감 : {{notice.submitdate}}</p>
+                    <a href="{% url 'noticedetail' notice.id %}" class="btn btn-primary">제출하기</a>
+                </div>
+            </div>
             {% endif %}
             {% endfor %}
 
@@ -84,6 +82,9 @@
                 </div>
 
             </details>
+            {% if user.is_superuser == True %}
+            <a href="{%url 'noticenew'%}" class="btn btn-primary">공지사항 추가</a>
+            {% endif %}
         </main>
 
         <footer class="shell-footer">
