--- a/hw/templates/hw_main.html
+++ b/hw/templates/hw_main.html
@@ -53,7 +53,10 @@
                     {% endfor %}
                 </tbody>
             </table>
-            <a href="#" class="button">제출하기</a>
+            <a href="#" class="btn btn-secondary">제출하기</a>
+            {% if user.is_superuser == True %}
+            <a href="{%url 'noticenew'%}" class="btn btn-primary">공지사항 추가</a>
+            {% endif %}
         </div>
     </div>
     </div>
