Added "Hw_main" link on the navbar for testing page

--- a/hw/templates/hw_main.html
+++ b/hw/templates/hw_main.html
@@ -55,7 +55,7 @@
             </table>
             <a href="#" class="btn btn-secondary">제출하기</a>
             {% if user.is_superuser == True %}
-            <a href="{%url 'noticenew'%}" class="btn btn-primary">공지사항 추가</a>
+            <a href="{%url 'notice_new'%}" class="btn btn-primary">공지사항 추가</a>
             {% endif %}
         </div>
     </div>
