--- a/page/templates/base.html
+++ b/page/templates/base.html
@@ -46,6 +46,7 @@
                 <a class="nav-item nav-link " href="{% url 'introduce' %}">Introduce</a>
                 <a class="nav-item nav-link " href="{% url 'homeworklist' %}">Homework</a>
                 <a class="nav-item nav-link " href="{% url 'QnA' %}">QnA</a>
+                <a class="nav-item nav-link " href="{% url 'main' %}">Hw_main</a>
                 {% else %}
                 <a class="nav-item nav-link " href="{% url 'home' %}">
                     Home </a>
@@ -54,14 +55,14 @@
                 <a class="nav-item nav-link " href="{% url 'login' %}" onclick="loginwarning()">QnA</a>
                 {% endif %}
             </div>
-            {% if user.is_authenticated %}
-            <a class="nav-item user">{{ user.name }}님</a>
-            <a class="nav-item nav-link ml-auto mr-1" name="logincheck" href="{% url 'logout' %}">
-                로그아웃</a>
-            {% else %}
-            <a class="nav-item nav-link ml-auto mr-1" name="logincheck" href="{% url 'login' %}">
-                로그인</a>
-            {% endif %}
+                {% if user.is_authenticated %}
+                <a class="nav-item user">{{ user.name }}님</a>
+                <a class="nav-item nav-link ml-auto mr-1" name="logincheck" href="{% url 'logout' %}">
+                    로그아웃</a>
+                {% else %}
+                <a class="nav-item nav-link ml-auto mr-1" name="logincheck" href="{% url 'login' %}">
+                    로그인</a>
+                {% endif %}
 
         </div>
     </nav>
