--- a/stacklion/templates/QnA.html
+++ b/stacklion/templates/QnA.html
@@ -71,6 +71,7 @@
     <div class="shell">
         <header class="shell-header">
             <h1 style="text-align: center;">질문과 답변</h1>
+            <span class="icon brands major fab fa-python"></span>
         </header>
         <main class="shell-body">
             <h2>{{ user.name }}님, 무엇이 궁금하신가요?</h2>
