--- a/hw/templates/hw_detail.html
+++ b/hw/templates/hw_detail.html
@@ -1,43 +1,62 @@
-{% extends 'base.html' %}
+{% extends 'hw_main.html' %}
 {% load static %}
 
-{% block link %}{% static 'hw/css/hw_detail.css' %}{% endblock %}
+{% block link %}{% static 'hw/css/hw_main.css' %}{% endblock %}
 {% block jqueryscript %}
-    <script>
-        $(document).ready(function () {
-            $('#ex_file').on('change', function () {
-                var files = $('#ex_file').prop("files");
-                var names = $.map(files, function(val) { return val.name; });
-                $('#file_list').empty();
-                $.each(names, function (i, name) {
-                    $('#file_list').append("<div>"+name+"</div>");
-                });
-            })
+<script>
+    $(document).ready(function () {
+        $('#ex_file').on('change', function () {
+            var files = $('#ex_file').prop("files");
+            var names = $.map(files, function (val) {
+                return val.name;
+            });
+            $('#file_list').empty();
+            $.each(names, function (i, name) {
+                $('#file_list').append("<div>" + name + "</div>");
+            });
         })
-    </script>
+    })
+</script>
 {% endblock %}
 
 {% block content %}
-    {{ homework }}
-    <div>
-        <h1>{{ homework.title }}</h1>
-        <span>마감일 : {{ homework.end_date }}</span>
-    </div>
-    <div>
-        {{ homework.content }}
+
+<body>
+    <div id="page-wrapper">
+        <div id="featured" class="container">
+            <div class="title">
+                <h2>{{ homework.title }}</h2>
+            </div>
+            <div class="jumbotron">
+                <h4>마감일 : {{ homework.end_date }}</h4>
+            </div>
+        </div>
     </div>
 
-    <div>
-        <h3>과제 제출 하기</h3>
-        <div>마감일 : {{ homework.end_date }}</div>
-        <form action="{% url 'register' %}" enctype="multipart/form-data">
-            <textarea></textarea><br>
-            <div class="filebox">
-                <label for="ex_file">파일선택</label>
-                <input type="file" id="ex_file" multiple>
-            </div>
-                <div id="file_list"></div>
-            <input type="submit" value="제출"/>
-        </form>
+    <div id="copyright">
+        <p>&copy; MJU X LIKELION 8th | All rights reserved. </p>
     </div>
+</body>
+
+{{ homework }}
+<div>
+    <span>마감일 : {{ homework.end_date }}</span>
+</div>
+<div>
+    {{ homework.content }}
+</div>
+
+<div>
+    <h3>과제 제출 하기</h3>
+    <div>마감일 : {{ homework.end_date }}</div>
+    <form action="{% url 'register' %}" enctype="multipart/form-data">
+        <textarea></textarea><br>
+        <div class="filebox">
+            <label for="ex_file">파일선택</label>
+            <input type="file" id="ex_file" multiple>
+        </div>
+        <div id="file_list"></div>
+        <input type="submit" value="제출" />
+    </form>
+</div>
 {% endblock %}
